--- a/src/app/Admin/add-user/add-user.component.html
+++ b/src/app/Admin/add-user/add-user.component.html
@@ -23,7 +23,7 @@
                         <div class="col-md-10 col-sm-10 ">
                             <div class="x_panel">
                                 <div class="x_title">
-                                    <h2>nouveau utilisateur</h2>
+                                    <h2>Nouveau utilisateur</h2>
                                     <ul class="nav navbar-right panel_toolbox">
                                         <li><a (click)="users()" style="font-size:17px;"><i
                                                     class="fa fa-angle-double-left"></i></a>
@@ -149,9 +149,9 @@
                                         <div class="ln_solid"></div>
                                         <div class="item form-group">
                                             <div class="col-md-6 col-sm-6 offset-md-3">
-                                                <button class="btn btn-default" type="reset">Annulé</button>
+                                                <button class="btn btn-default" type="reset">Annuler</button>
                                                 <button class="btn btn-primary" type="submit"
-                                                    [disabled]="userForm.invalid">Validé</button>
+                                                    [disabled]="userForm.invalid">Valider</button>
                                             </div>
                                         </div>
                                     </form>
