--- a/src/app/Admin/detail-user/detail-user.component.html
+++ b/src/app/Admin/detail-user/detail-user.component.html
@@ -30,7 +30,7 @@
                         <div class="col-md-12 col-sm-12 ">
                             <div class="x_panel">
                                 <div class="x_title">
-                                    <h2>Rapport <small>sur l'employé</small></h2>
+                                    <h2>Rapport sur l'employé</h2>
 
                                     <ul class="nav navbar-right panel_toolbox">
                                         <li *ngIf="ownerAccount .role=='admin'"><a (click)="users()"
