--- a/src/app/Admin/edit-user/edit-user.component.html
+++ b/src/app/Admin/edit-user/edit-user.component.html
@@ -21,7 +21,7 @@
                         <div class="col-md-12 col-sm-12 ">
                             <div class="x_panel">
                                 <div class="x_title">
-                                    <h2>Modifier les informations <small>d'utilisateur</small></h2>
+                                    <h2>Modifier les informations d'utilisateur</h2>
 
                                     <ul class="nav navbar-right panel_toolbox">
                                         <li><a (click)="users()" style="font-size:17px;"><i
@@ -47,7 +47,7 @@
                                         <br>
 
                                         &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;<button class="btn btn-success"
-                                            (click)="detailUser(user?.id)">Detaille</button>
+                                            (click)="detailUser(user?.id)">Détails</button>
 
 
                                     </div>
