--- a/src/app/Admin/services/services.component.html
+++ b/src/app/Admin/services/services.component.html
@@ -48,7 +48,7 @@
                                                     <div class="x_title">
                                                         <h2>{{c.nom}}</h2>
                                                         <ul class="nav navbar-right panel_toolbox">
-                                                            &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp;
+                                                            &nbsp;&nbsp; &nbsp; &nbsp;&nbsp;
                                                             <li><a (click)="editService(c.id)" title="edit"><i
                                                                         class="fa fa-pencil"></i></a>
                                                             </li>
@@ -169,6 +169,15 @@
                                         </nav>
                                     </div>
 
+                                    <div id="box">
+
+
+
+
+
+
+                                    </div>
+
 
 
 
@@ -177,6 +186,7 @@
                                 </div>
                             </div>
                         </div>
+
                     </div>
                 </div>
             </div>
