--- a/src/app/Infirmier/dossier-medical/dossier-medical.component.html
+++ b/src/app/Infirmier/dossier-medical/dossier-medical.component.html
@@ -109,7 +109,7 @@
                                                     <td>
                                                         <a (click)="detailPatient(c.patient.id)"
                                                             class="btn btn-primary btn-xs"><i class="fa fa-folder"></i>
-                                                            detaille </a>
+                                                            détails </a>
 
 
                                                         <a (click)="prescriptionActif(c.patient.id)"
