--- a/src/app/Infirmier/fiche-soin-aliment/fiche-soin-aliment.component.html
+++ b/src/app/Infirmier/fiche-soin-aliment/fiche-soin-aliment.component.html
@@ -134,7 +134,7 @@
                                                                                     value="true" checked disabled>
 
                                                                                 <a class="clickable" data-toggle="modal"
-                                                                                    [attr.data-target]="'#myModal' +i">detaille</a>
+                                                                                    [attr.data-target]="'#myModal' +i">détails</a>
 
 
 
@@ -147,8 +147,8 @@
                                                                                             <!-- Modal Header -->
                                                                                             <div class="modal-header">
                                                                                                 <h4 class="modal-title">
-                                                                                                    Detaille sur
-                                                                                                    l'aliment'
+                                                                                                    Détails sur
+                                                                                                    l'aliment
                                                                                                 </h4>
                                                                                                 <button type="button"
                                                                                                     class="close"
@@ -256,9 +256,9 @@
                                                                 </div>
                                                                 <div *ngIf="ownerAccount.role=='medecin'">
                                                                     <div *ngIf="2 - Validations.length ==0">
-                                                                        <span id="red">La service
+                                                                        <span id="red">Le service
                                                                             des:&nbsp;{{fileCare?.prescription.type_aliment}}&nbsp;est
-                                                                            effectué avec succes</span><br>
+                                                                            effectué avec succès</span><br>
 
 
                                                                     </div>
