--- a/src/app/Infirmier/fiche-soin/fiche-soin.component.html
+++ b/src/app/Infirmier/fiche-soin/fiche-soin.component.html
@@ -146,7 +146,7 @@
 
                                                                                     <a class="clickable"
                                                                                         data-toggle="modal"
-                                                                                        [attr.data-target]="'#myModal' +i">detaille</a>
+                                                                                        [attr.data-target]="'#myModal' +i">détails</a>
 
                                                                                     <!-- The Modal -->
                                                                                     <div class="modal"
@@ -160,8 +160,8 @@
                                                                                                     class="modal-header">
                                                                                                     <h4
                                                                                                         class="modal-title">
-                                                                                                        Detaille sur
-                                                                                                        injection
+                                                                                                        Détail sur
+                                                                                                        l'injection
                                                                                                     </h4>
                                                                                                     <button
                                                                                                         type="button"
@@ -302,7 +302,7 @@
                                                                             *ngIf="item.nbre_par_jour - Validations.length ==0">
                                                                             <span id="red">L'injection
                                                                                 du:&nbsp;{{item?.nom_traitement}}&nbsp;est
-                                                                                effectué avec succes</span><br>
+                                                                                effectué avec succès</span><br>
 
 
                                                                         </div>
@@ -365,7 +365,7 @@
 
                                                                                     <a class="clickable"
                                                                                         data-toggle="modal"
-                                                                                        [attr.data-target]="'#myModal' +i">detaille</a>
+                                                                                        [attr.data-target]="'#myModal' +i">détails</a>
 
                                                                                     <!-- The Modal -->
                                                                                     <div class="modal"
@@ -379,8 +379,8 @@
                                                                                                     class="modal-header">
                                                                                                     <h4
                                                                                                         class="modal-title">
-                                                                                                        Detaille sur
-                                                                                                        injection
+                                                                                                        Détails sur
+                                                                                                        l'injection
                                                                                                     </h4>
                                                                                                     <button
                                                                                                         type="button"
@@ -484,7 +484,7 @@
                                                                             *ngIf="item.nbre_par_jour > Validations.length">
                                                                             <span id="red">Stoper avant que les
                                                                                 &nbsp;{{item.nbre_par_jour - Validations.length}}&nbsp;injection(s)
-                                                                                est (sont)effectué</span><br>
+                                                                                est (sont) effectué(s)</span><br>
 
                                                                         </div>
 
@@ -498,7 +498,7 @@
                                                                         *ngIf="item.nbre_par_jour - Validations.length ==0">
                                                                         <span id="red">L'injection
                                                                             du:&nbsp;{{item?.nom_traitement}}&nbsp;est
-                                                                            effectué avec succes</span><br>
+                                                                            effectué avec succès</span><br>
 
 
                                                                     </div>
