--- a/src/app/Infirmier/fiches-infirmier-actif/fiches-infirmier-actif.component.html
+++ b/src/app/Infirmier/fiches-infirmier-actif/fiches-infirmier-actif.component.html
@@ -10,7 +10,7 @@
                 <div class="">
                     <div class="page-title">
                         <div class="title_left">
-                            <h2>Fiches infirmière Courant</h2>
+                            <h2>Fiche infirmière Courante</h2>
                         </div>
                     </div>
 
