--- a/src/app/Medecin/dossier-sby-presc/dossier-sby-presc.component.html
+++ b/src/app/Medecin/dossier-sby-presc/dossier-sby-presc.component.html
@@ -10,7 +10,7 @@
                 <div class="">
                     <div class="page-title">
                         <div class="title_left">
-                            <h2>Dossier du soins</h2>
+                            <h2>Dossier du soin</h2>
                         </div>
                     </div>
 
@@ -21,7 +21,7 @@
                         <div class="col-md-12 col-sm-12 ">
                             <div class="x_panel">
                                 <div class="x_title">
-                                    <h2>Liste de tous les fiches infirmiers:
+                                    <h2>Liste de tous les fiches infirmières:
                                         <small>{{presc?.patient.nom}}&nbsp;{{presc?.patient.prenom}}</small></h2>
 
                                     <ul class="nav navbar-right panel_toolbox">
@@ -217,7 +217,7 @@
                                             <blockquote class="message" id="decaler2">
                                                 <p>
                                                     &nbsp;
-                                                    Le dossier soins du
+                                                    Le dossier soin du
                                                     patient:&nbsp;{{presc?.patient.nom}}&nbsp;{{presc?.patient.prenom}}
                                                     est vide .</p>
                                                 <br>
