--- a/src/app/Secretaire/detail-medical-prescription/detail-medical-prescription.component.html
+++ b/src/app/Secretaire/detail-medical-prescription/detail-medical-prescription.component.html
@@ -11,8 +11,8 @@
                 <div class="">
                     <div class="page-title">
                         <div class="title_left">
-                            <h2>Prescription médicale<small>&nbsp;de &nbsp;
-                                    {{prescription?.patient.nom}}&nbsp;{{prescription?.patient.prenom}}</small> </h2>
+                            <h2>Prescription médicale&nbsp;de &nbsp;
+                                {{prescription?.patient.nom}}&nbsp;{{prescription?.patient.prenom}} </h2>
                         </div>
 
 
