--- a/src/app/Secretaire/detail-patient/detail-patient.component.html
+++ b/src/app/Secretaire/detail-patient/detail-patient.component.html
@@ -20,7 +20,7 @@
                         <div class="col-md-12 col-sm-12 ">
                             <div class="x_panel">
                                 <div class="x_title">
-                                    <h2>Rapport <small>sur le patient</small></h2>
+                                    <h2>Rapport sur le patient</h2>
                                     <ul class="nav navbar-right panel_toolbox">
 
                                         <li *ngIf="user.role=='secretaire'"><a (click)="editPatient(patient?.id)"
@@ -47,7 +47,7 @@
                                             <ul id="myTab" class="nav nav-tabs bar_tabs" role="tablist">
                                                 <li role="presentation" class="active"><a href="#tab_content1"
                                                         id="home-tab" role="tab" data-toggle="tab"
-                                                        aria-expanded="true">Détaille</a>
+                                                        aria-expanded="true">Détails</a>
                                                 </li>
 
                                                 <li role="presentation" class=""><a href="#tab_content3" role="tab"
