--- a/src/app/Secretaire/detail-soin-prescription/detail-soin-prescription.component.html
+++ b/src/app/Secretaire/detail-soin-prescription/detail-soin-prescription.component.html
@@ -11,8 +11,8 @@
                 <div class="">
                     <div class="page-title">
                         <div class="title_left">
-                            <h2>Prescription de soins<small>&nbsp;de&nbsp;
-                                    {{prescription?.patient.nom}}&nbsp;{{prescription?.patient.prenom}}</small> </h2>
+                            <h2>Prescription du soin&nbsp;de&nbsp;
+                                {{prescription?.patient.nom}}&nbsp;{{prescription?.patient.prenom}} </h2>
                         </div>
 
 
@@ -26,7 +26,7 @@
                                 <div class="x_title">
                                     <button class="btn" id="add" (click)="detailPatient(prescription.patient.id)"><i
                                             class="fa fa-times"></i></button>
-                                    <h1 style="text-align: center;">Prescription Soins </h1><br>
+                                    <h1 style="text-align: center;">Prescription Soin </h1><br>
                                     <hr>
                                     <div class="row">
                                         <div class="col-md-6 col">
