--- a/src/app/Secretaire/edit-suivi-prescription/edit-suivi-prescription.component.html
+++ b/src/app/Secretaire/edit-suivi-prescription/edit-suivi-prescription.component.html
@@ -11,8 +11,8 @@
                 <div class="">
                     <div class="page-title">
                         <div class="title_left">
-                            <h2>Modifie la prescription surveillance du:
-                                <small>{{prescription?.patient?.nom}}&nbsp;{{prescription?.patient?.prenom}}</small>
+                            <h2>Modifie la prescription surveillance du
+                                {{prescription?.patient?.nom}}&nbsp;{{prescription?.patient?.prenom}}
                             </h2>
                         </div>
 
@@ -122,7 +122,7 @@
                                         </div><br>
 
                                         <!--edit trai-->
-                                        <div class="card-header">Ancien Traitement</div>
+                                        <div class="card-header">Ancien Suivi</div>
                                         <br>
                                         <div class="x_content" style="background-color: white;">
                                             <br />
@@ -208,7 +208,7 @@
 
                                         <!--/edit trai-->
                                         <br><br>
-                                        <div class="card-header">Nouveau Traitement</div>
+                                        <div class="card-header">Nouveau Suivi</div>
                                         <div class="card-body" formArrayName="contacts">
                                             <div class="row">
                                                 <div class="col-6"
