--- a/src/app/Secretaire/edit-test-soin/edit-test-soin.component.html
+++ b/src/app/Secretaire/edit-test-soin/edit-test-soin.component.html
@@ -20,7 +20,7 @@
                                 <div class="col-md-8 " id="decaleAffecteBox">
                                     <div class="x_panel">
                                         <div class="x_title">
-                                            <h2>Modifier le suivi {{test.nom_test}} </h2>
+                                            <h2>Modifier le soin {{test.nom_test}} </h2>
 
                                             <div class="clearfix"></div>
                                         </div>
