--- a/src/app/Secretaire/edit-traitement/edit-traitement.component.html
+++ b/src/app/Secretaire/edit-traitement/edit-traitement.component.html
@@ -20,7 +20,7 @@
                                 <div class="col-md-7 " id="decaleAffecteBox">
                                     <div class="x_panel">
                                         <div class="x_title">
-                                            <h2>Modifier le traitement: <small>{{traitement.nom_traitement}}</small>
+                                            <h2>Modifier le traitement {{traitement.nom_traitement}}
                                             </h2>
 
                                             <div class="clearfix"></div>
