--- a/src/app/Secretaire/historique-prescription/historique-prescription.component.html
+++ b/src/app/Secretaire/historique-prescription/historique-prescription.component.html
@@ -10,7 +10,7 @@
                 <div class="">
                     <div class="page-title">
                         <div class="title_left">
-                            <h3>Le rapport des prescriptions: </h3>
+                            <h3>Rapport des prescriptions </h3>
                         </div>
                     </div>
 
@@ -21,8 +21,8 @@
                         <div class="col-md-12 col-sm-12 ">
                             <div class="x_panel">
                                 <div class="x_title">
-                                    <h2>Liste de tous les <small>Prescriptions du:
-                                            {{Hpatient?.patient.nom}}&nbsp;{{Hpatient?.patient.prenom}}</small></h2>
+                                    <h2>Liste de tous les Prescriptions du:
+                                        {{Hpatient?.patient.nom}}&nbsp;{{Hpatient?.patient.prenom}}</h2>
 
                                     <ul class="nav navbar-right panel_toolbox">
 
