--- a/src/app/Secretaire/patients/patients.component.html
+++ b/src/app/Secretaire/patients/patients.component.html
@@ -10,7 +10,7 @@
                 <div class="">
                     <div class="page-title">
                         <div class="title_left">
-                            <h3>Patients: </h3>
+                            <h3>Patients </h3>
                         </div>
                     </div>
 
@@ -21,7 +21,7 @@
                         <div class="col-md-12 col-sm-12 ">
                             <div class="x_panel">
                                 <div class="x_title">
-                                    <h2>Liste de tous les <small>Patients</small></h2>
+                                    <h2>Liste de tous les patients</h2>
 
                                     <ul class="nav navbar-right panel_toolbox">
 
