--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -19,7 +19,7 @@
                 </a>
 
             </li>
-            <li *ngIf="user.role=='secretaire'" (click)="searchTraitement()"><a><i class="fa fa-search"></i> Traitement
+            <li *ngIf="user.role=='secretaire'" (click)="searchTraitement()"><a><i class="fa fa-search"></i> Traitements
                 </a>
 
             </li>
@@ -34,7 +34,7 @@
                 </ul>
             </li-->
 
-            <li><a (click)="settingUser(user.id)"><i class="fa fa-cogs"></i> Paramètre </a>
+            <li><a (click)="settingUser(user.id)"><i class="fa fa-cogs"></i> Paramètres </a>
             </li>
 
         </ul>
