--- a/src/app/Admin/users/users.component.html
+++ b/src/app/Admin/users/users.component.html
@@ -10,7 +10,7 @@
                 <div class="">
                     <div class="page-title">
                         <div class="title_left">
-                            <h3>Utilisateurs: </h3>
+                            <h3>Utilisateurs </h3>
                         </div>
                     </div>
 
@@ -21,7 +21,7 @@
                         <div class="col-md-12 col-sm-12 ">
                             <div class="x_panel">
                                 <div class="x_title">
-                                    <h2>Liste de tous les <small>Utilisateurs</small></h2>
+                                    <h2>Liste de tous les utilisateurs</h2>
 
                                     <ul class="nav navbar-right panel_toolbox">
                                         <li><a class="close-link" (click)="home()"><i class="fa fa-close"></i></a>
