--- a/src/app/Infirmier/file-not-completed/file-not-completed.component.html
+++ b/src/app/Infirmier/file-not-completed/file-not-completed.component.html
@@ -21,7 +21,7 @@
                         <div class="col-md-12 col-sm-12 ">
                             <div class="x_panel">
                                 <div class="x_title">
-                                    <h2>Liste des fiches <small>NON COMPLET</small></h2>
+                                    <h2>Liste des fiches <small>INCOMPLETE</small></h2>
 
                                     <ul class="nav navbar-right panel_toolbox">
 
