--- a/src/app/Secretaire/detail-aliment-prescription/detail-aliment-prescription.component.html
+++ b/src/app/Secretaire/detail-aliment-prescription/detail-aliment-prescription.component.html
@@ -11,8 +11,8 @@
                 <div class="">
                     <div class="page-title">
                         <div class="title_left">
-                            <h2>Prescription aliment<small>&nbsp;de&nbsp;
-                                    {{prescription?.patient.nom}}&nbsp;{{prescription?.patient.prenom}}</small> </h2>
+                            <h2>Prescription aliment&nbsp;de&nbsp;
+                                {{prescription?.patient.nom}}&nbsp;{{prescription?.patient.prenom}}</h2>
                         </div>
 
 
