--- a/src/app/Secretaire/edit-soin-prescription/edit-soin-prescription.component.html
+++ b/src/app/Secretaire/edit-soin-prescription/edit-soin-prescription.component.html
@@ -11,8 +11,8 @@
                 <div class="">
                     <div class="page-title">
                         <div class="title_left">
-                            <h2>Modifie la prescription soins du:
-                                <small>{{prescription?.patient?.nom}}&nbsp;{{prescription?.patient?.prenom}}</small>
+                            <h2>Modifie la prescription soin du:
+                                {{prescription?.patient?.nom}}&nbsp;{{prescription?.patient?.prenom}}
                             </h2>
                         </div>
 
@@ -30,7 +30,7 @@
                                     <button class="btn" (click)="detailSoinPrescription(prescription.id)"><i
                                             class="fa fa-file-powerpoint-o"></i>
                                     </button>
-                                    <h1 style="text-align: center;">Prescription soins </h1><br>
+                                    <h1 style="text-align: center;">Prescription soin </h1><br>
                                     <div class="col-md-6 col row">
                                         <label class="col-form-label col-md-3 col-sm-3 label-align"
                                             for="first-name">Patient
@@ -122,7 +122,7 @@
                                         </div><br>
 
                                         <!--edit trai-->
-                                        <div class="card-header">Ancien Traitement</div>
+                                        <div class="card-header">Ancien Soins</div>
                                         <br>
                                         <div class="x_content" style="background-color: white;">
                                             <br />
@@ -208,7 +208,7 @@
 
                                         <!--/edit trai-->
                                         <br><br>
-                                        <div class="card-header">Nouveau Traitement</div>
+                                        <div class="card-header">Nouveau Soins</div>
                                         <div class="card-body" formArrayName="contacts">
                                             <div class="row">
                                                 <div class="col-6"
