--- a/src/app/Secretaire/search-traitemnt/search-traitemnt.component.html
+++ b/src/app/Secretaire/search-traitemnt/search-traitemnt.component.html
@@ -20,7 +20,7 @@
                                 <div class="col-md-7 " id="decaleAffecteBox">
                                     <div class="x_panel">
                                         <div class="x_title">
-                                            <h2>Chercher un traitement <small>:</small>
+                                            <h2>Chercher un traitement
                                             </h2>
 
                                             <div class="clearfix"></div>
@@ -75,7 +75,7 @@
                                                 <div class="ln_solid"></div>
                                                 <div class="form-group row">
                                                     <div class="col-md-9 col-sm-9  offset-md-3">
-                                                        <button class="btn btn-default" type="reset">Annulé</button>
+                                                        <button class="btn btn-default" type="reset">Annuler</button>
 
                                                         <button type="submit" [disabled]="form.invalid"
                                                             class="btn btn-success">Valider</button>
