--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -20,11 +20,11 @@
                         <a class="dropdown-item" href="javascript:;" (click)="profileUser(user.id)"> Profile</a>
                         <a class="dropdown-item" href="javascript:;" (click)="settingUser(user.id)">
                             <span class="badge bg-red pull-right">50%</span>
-                            <span>Parametre</span>
+                            <span>Paramètres</span>
                         </a>
                         <!--a class="dropdown-item" href="javascript:;">Help </a-->
-                        <a class="dropdown-item" (click)="onLogout()"><i class="fa fa-sign-out pull-right"></i> Log
-                            Out</a>
+                        <a class="dropdown-item" (click)="onLogout()"><i class="fa fa-sign-out pull-right"></i>
+                            Se déconnecter</a>
                     </div>
                 </li>
                 <ng-container *ngIf="user.role=='infirmier'">
@@ -47,8 +47,8 @@
                                                 class="time">{{item?.patient.nom}}&nbsp;{{item?.patient.prenom}}</span>
                                         </span>
                                         <span class="message">
-                                            Ce patient a une fiche infirmier non complette<br>
-                                            <a (click)="gotoFile(item.prescription.id)">Verrifier</a>
+                                            Fiche du soin incomplete<br>
+                                            <a (click)="gotoFile(item.prescription.id)">Vérifier</a>
                                         </span>
                                     </a>
                                 </li>
@@ -57,8 +57,8 @@
                             <li class="nav-item">
                                 <div class="text-center">
                                     <a class="dropdown-item" (click)="fileNotCompletted()">
-                                        <strong>Voir La liste</strong>
-                                        <i class="fa fa-angle-right"></i>
+                                        <strong> Voir la liste </strong>
+
                                     </a>
                                 </div>
                             </li>
